# Performance-Tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  unittests.yml
examples/: portfolio_data-1.csv
src/performance_tracker/: main.py
src/performance_tracker/core/: worker.py
src/performance_tracker/latex/: compose.py  sidebar.py
src/performance_tracker/latex/factories/: chart_graph_factory.py  data_and_recommendations.py  end_page_factory.py  full_width_rule_factory.py  latex_factory_base.py  llm_factory.py  new_page_factory.py  price_target_factory.py  section_heading_factory.py  start_page_factory.py
src/performance_tracker/latex/resources/: perftracker.cls
src/performance_tracker/services/: exchange_rate.py  inflation.py  ticker.py
src/performance_tracker/services/llm/: google_client.py  llm_client.py
src/performance_tracker/ui/: main_page.py
src/performance_tracker/utils/: calc_df.py  fill_df.py  isin_validation.py  join.py  maps.py  ratelimit.py  short_number_rep.py
tests/latex/: test_chart_graph_factory.py  test_data_and_recommendations_factory.py  test_latex_factory_base.py  test_price_target_factory.py  test_static_factories.py
tests/services/: test_inflation.py
tests/ui/: test_main_page.py
tests/utils/: test_fill_df.py  test_short_rep.py
